--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div id="time"><span id="timeminute">00</span>:<span id="timesecond">00</span>:<span id="timecentisecond">00</span></div>
         
         <div id="controlsContainer" class="row">
-            <div class="colo-xs-2 col-xs-offset-4">
+            <div class="col-xs-2 col-xs-offset-4">
                 <div id="startButton" class="control">Start</div>
                 <div id="stopButton" class="control">Stop</div>
                 <div id="resumeButton" class="control">Resume</div>
             </div>
             
-            <div class="colo-xs-2">
+            <div class="col-xs-2">
                 <div id="lapButton" class="control">Lap</div>
                 <div id="resetButton" class="control">Reset</div>
             </div>
