--- a/index.html
+++ b/index.html
@@ -41,5 +41,19 @@
         </div>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-  </body>
+    <script>
+      $(function(){
+          //Defining the variables to be used .
+          var mode = 0;//game mode
+          var timeCounter = 0;//for counting time
+          var lapCounter = 0;//for counting the lap time
+          var action;//variable for setInterval
+          var lapNumber = 0;//for the number of laps
+          //for minutes,seconds,centiseconds of time and lap.
+          
+          var timeMinutes, timeSeconds, timeCentiseconds, lapMinutes, lapSeconds, lapCentiseconds;
+          
+      });
+      </script>  
+    </body>
 </html>
